Updating stage 2
